# unixish

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  i
.githooks/: pre-commit  pre-push
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml  release.yml
contribute/: readme.md  release.md  run.md
scripts/: install.ps1  package.ps1  uninstall.ps1  winget.ps1
src/: app.rs  boot.rs  config.rs  hotkey.rs  icon.rs  key.rs  lock.rs  log.rs  main.rs  menu.rs  panel.rs  state.rs  tile.rs  tray.rs  update.rs  win.rs
