[package]
name = "unixish"
version = "0.0.1"
edition = "2024"

[build-dependencies]
winres = "0.1"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
windows = { version = "0.61", features = [
	"Win32_Foundation",
	"Win32_Graphics_Dwm",
	"Win32_Graphics_Gdi",
	"Win32_Security",
	"Win32_System_Threading",
	"Win32_UI_Controls",
	"Win32_UI_Input_KeyboardAndMouse",
	"Win32_UI_HiDpi",
	"Win32_UI_Shell",
	"Win32_UI_WindowsAndMessaging"
] }
winreg = "0.55"
